# tracked_robot_simulator

./: README.md  install_docker.md  install_native.md
matlab_optimization/: computeFeasibleOmega.m  computeRollout.m  computeVelocitiesFromTracks.m  constraints.m  cost.m  dubinsClass.m  dynamics.m  evalSlippage.m  eval_solution.m  extractUnicycleSetpoint.m  getWheelVelocityParamsFromDubin.m  get_omega_from_dubins.m  get_turning_sign_from_dubins_direction.m  integrate_dynamics.m  long_and_side_slip_model.m  optimal_path.m  optimize_cpp.m  plotOrientation.m  plot_curve.m  plot_dubins.m  plot_solution.m  robot_params.m  side_slip_model.m  unicycle_model.m
matlab_optimization/matlabNN/: alpha_model_forcodegen.mat  beta_l_model_forcodegen.mat  eval_slippage.m
matlab_optimization/matlabNN/friction_0.1/: alpha_model_forcodegen.mat  beta_l_model_forcodegen.mat  beta_r_model_forcodegen.mat
matlab_optimization/matlabNN/friction_0.4/: beta_r_model_forcodegen.mat
matlab_optimization/optim_interfaces/: CMakeLists.txt  package.xml
matlab_optimization/optim_interfaces/srv/: Optim.srv
matlab_optimization/ros/: OptimCallbackRos1.m  OptimCallbackRos2.m  ros_node.m
robot_control/base_controllers/: params.py  tractor_simulator.py
robot_control/base_controllers/components/inverse_kinematics/: test_ik_mantis.py
robot_control/base_controllers/tracked_robot/regressor/data3d/: ident_wheels_fr_0.4_ramp_0.0_wheelL_-0.7826086956521721.csv  ident_wheels_fr_0.4_ramp_0.0_wheelL_-10.173913043478262.csv  ident_wheels_fr_0.4_ramp_0.0_wheelL_-11.73913043478261.csv  (+55 more)
(+1 files in other folders)
